# data-engineer-cloudwalk

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  run.sh
airflow/: requirements.txt
airflow/.astro/: config.yaml
airflow/dags/: data_pipeline.py
airflow/include/: extract.py  init_db.sql  load.py
airflow/tests/: extraction_test.py  load_test.py  transform_test.py
db/: init_db.sql
json/: gdp_data.json
pgadmin/: setup_pgadmin.sh
pgadmin_config/: setup_pgadmin.sh
scripts/: extract.py  load.py  transform.py  transform.sql
