[tool.poetry]
name = "data-engineer-cloudwalk"
version = "0.1.0"
description = ""
authors = ["lorenzo-analisou <167652280+lorenzo-zappone@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
